# orange-biosci

./: .gitignore  MANIFEST.in  README.md  environment-development.md  publishing.md  pyproject.toml  setup.py  update-cycle.md
examples/: elements-pairing-examples.ows  list-splitter-examples.ows  list-splitter-table.csv  pairing-table-1.csv  pairing-table-2.csv  pivot-alternative-examples.ows  pivot-alternative-table-metadata-1.csv  pivot-alternative-table-metadata-2.csv  pivot-alternative-table-original-simple.csv
orange3biosci/widgets/: __init__.py  elements_pairing.py  geo_preprocessor.py  geo_projection.py  geo_soft_extractor.py  list_splitter.py  pivot_custom.py  simple_transpose.py  string_db.py
reference/: string-db-schemas.md
test/: selected-genes-string.csv  string_db_search.py  string_interactions_short.tsv  widget-site-comparison.ows
workflows/string-db-preparation/: string-db-preparation-input-output.md  string-db-preparation.ows
