[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orange-biosci"
version = "0.3.0"
description = "Custom Orange Bio Sci Widgets"
authors = [
    {name = "André Santanchè"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Visualization',
        'Topic :: Scientific/Engineering :: Information Analysis',
]

[project.urls]
Homepage = "https://github.com/santanche/orange-biosci"